# ethminer

./: CMakeLists.txt  README.md
ethminer/: main.cpp
libethcore/: CMakeLists.txt  Farm.cpp  Miner.h
libkeccak-cl/: CMakeLists.txt  KeccakCLMiner.cpp  KeccakCLMiner.h
libkeccak-cl/kernels/cl/: keccak.cl
libsha3-cl/: CMakeLists.txt  Sha3CLMiner.cpp  Sha3CLMiner.h
libsha3-cl/kernels/cl/: sha3.cl
